@@ -54,6 +54,11 @@ Version 1.4.18 - 11 May 2009
     [also CVE-2009-1578]
   - Fixed unsanitized shell command in example IMAP username mapping
     function (map_yp_alias) (Thanks to Niels Teusink). [CVE-2009-1579]
+  - Fixed session fixation issues where someone who can modify a user's
+    cookies could gain control of their login session.  The SquirrelMail
+    base URI is now uniformly generated, extraneous cookies are cleaned
+    up and session IDs are regenerated upon every login (Thanks to Tomas
+    Hoger). [CVE-2009-1580]
 
 Version 1.4.17 - 03 December 2008
 ---------------------------------
